<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.example.neutralnews_android.ui.main.filter.FilterActivityVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_main_background"
            android:clickable="false"
            android:fitsSystemWindows="true"
            android:hapticFeedbackEnabled="false"
            android:onClick="@{(v)->vm.onClick(v)}">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/clHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{(v)->vm.onClick(v)}"
                    android:src="@drawable/ic_arrow_left"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTitle"
                    style="@style/TextView.montserrat_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/filter_title"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <ImageView
                    android:id="@+id/btnSaveSettings"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="24dp"
                    android:contentDescription="@string/save"
                    android:src="@drawable/baseline_save_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:onClick="@{(v)->vm.onClick(v)}"
                    android:clickable="true"
                    android:focusable="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/txtClearAll"
                style="@style/TextView.montserrat_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/ic_bg_rd_black70_60"
                android:onClick="@{(v)->vm.onClick(v)}"
                android:paddingHorizontal="13dp"
                android:paddingVertical="11dp"
                android:text="@string/clear_all"
                android:textColor="@color/black10"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/clHeader" />

            <TextView
                android:id="@+id/txtDone"
                style="@style/TextView.montserrat_semi_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:background="@drawable/ic_bg_rd_black70_60"
                android:onClick="@{(v)->vm.onClick(v)}"
                android:paddingHorizontal="13dp"
                android:paddingVertical="11dp"
                android:text="@string/done"
                android:textColor="@color/black10"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/txtClearAll" />

            <!-- Media options filter -->
            <LinearLayout
                android:id="@+id/llMediaTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDone">

                <TextView
                    android:id="@+id/txtMediaOptions"
                    style="@style/TextView.montserrat_semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:textColor="@color/black10"
                    android:textSize="16sp" />

            </LinearLayout>

            <com.example.neutralnews_android.util.tagview.TagView
                android:id="@+id/tagMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/llMediaTxt" />

            <View
                android:id="@+id/v1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray80"
                app:layout_constraintTop_toBottomOf="@id/tagMedia" />

            <!-- Categories options filter -->
            <LinearLayout
                android:id="@+id/llCategoriesTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/v1">

                <TextView
                    android:id="@+id/txtCategories"
                    style="@style/TextView.montserrat_semi_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/categories"
                    android:textColor="@color/black10"
                    android:textSize="16sp" />
            </LinearLayout>

            <com.example.neutralnews_android.util.tagview.TagView
                android:id="@+id/tagCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/llCategoriesTxt" />

            <View
                android:id="@+id/v2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="20dp"
                android:background="@color/gray80"
                app:layout_constraintTop_toBottomOf="@id/tagCategories" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>